src/Apttus Contract Management/objects/QueryTemplateQualifier__c.object
<CustomObject>
    <description>Filter used to select a query template</description>
    <fields>
        <fullName>CompOper__c</fullName>
        <description>Comparison operator for a field expression in a query</description>
        <label>Comparison Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equal to</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less than or equal to</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater than or equal to</fullName>
                </value>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
                <value>
                    <fullName>like</fullName>
                </value>
                <value>
                    <fullName>not like</fullName>
                </value>
                <value>
                    <fullName>includes</fullName>
                </value>
                <value>
                    <fullName>excludes</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <description>The name of a field in the specified object.</description>
        <inlineHelpText>The name of a field in the specified object.</inlineHelpText>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QueryTemplate__c</fullName>
        <description>The associated query template</description>
        <inlineHelpText>The associated query template</inlineHelpText>
        <label>Query Template</label>
        <referenceTo>QueryTemplate__c</referenceTo>
        <relationshipLabel>Qualifiers</relationshipLabel>
        <relationshipName>QueryTemplateQualifiers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RelationField__c</fullName>
        <description>Relation field that has a foreign key back to the parent</description>
        <inlineHelpText>Relation field that has a foreign key back to the parent</inlineHelpText>
        <label>Relation Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObjectLabel__c</fullName>
        <description>Specifies the object to query</description>
        <inlineHelpText>The object to query</inlineHelpText>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agreement</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Organization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SObjectType__c</fullName>
        <description>Specifies the type of the object to query.</description>
        <inlineHelpText>The object type to query</inlineHelpText>
        <label>SObject Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SObjectLabel__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Apttus__APTS_Agreement__c</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Organization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>Qualifier sequence</description>
        <inlineHelpText>Qualifier sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>A value used to compare with the value in field in a query</description>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Query Template Qualifier</label>
    <nameField>
        <displayFormat>QTQ-{0000000}</displayFormat>
        <label>Qualifier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Query Template Qualifiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>